code cleanup/re-org, app transition from red5/flash to tomcat9